--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # https://github.com/ddollar/forego
-ASSET_HOST=localhost:3000
-APPLICATION_HOST=localhost:3000
+ASSET_HOST=yp-bk.herokuapp.com
+APPLICATION_HOST=yp-bk.herokuapp.com
 PORT=3000
 RACK_ENV=development
 RACK_MINI_PROFILER=0
